
2013-04-17  Zoltan Bojthe

	TCP: added lifecycle support

2013-04-04  Zoltan Bojthe

	Several fixes and refactoring changes on the original contributed
	TCP Vegas and Westwood code; see git log for details.

2013-03-14  Zoltan Bojthe

	TCP: Added Vegas and Westwood algorithms

	Source: https://github.com/maferhe2/TCP-Vegas-Westwood,
	commit 5cae09feea84bd85b9d657833de90f4beae1de25

	See the following paper:
	"INET framework extensions for TCP Vegas and TCP Westwood",
	Maria Fernandez, Carlos Calafate, Juan-Carlos Cano and Pietro Manzoni.
	OMNeT++ Workshop, 2013.
	http://www.omnet-workshop.org/2013/uploads/slides/OMNeT-Workshop2013-SP-4.pdf

2013-01-30  ------ inet-2.1.0 released ------

2012-11-14  Zoltan Bojthe

	Fix for the Nagle algorithm: should send data from queue if received any ACK

2012-11-07  Zoltan Bojthe

	Bugfix for syn-sent issue: do not send RST when received ACK+RST
	Bugfix: bad ack_num in sent in RST packet when connection closed.

2012-10-31  Zoltan Bojthe

	Fixed TCP_I_CLOSED, TCP_I_PEER_CLOSED notifications sending

2012-08-07  ------ inet-2.0.0 released ------

2012-06-25  ------ inet-1.99.5 released ------

2012-03-20  ------ inet-1.99.4 released ------

2012-02-24  ------ inet-1.99.3 released ------

2012-02-08  Andras Varga

	TCP (INET,lwIP,NSC): renamed DataStreamQueue classes to ByteStreamQueue

2012-02-07  Zoltan Bojthe

	TCP queue: remove space from end of output of info() function

2012-02-07  Zoltan Bojthe

	TCP queues: fix for enqueue: checks  queue size < 2GiB

	need for seqence no comparisons

2012-02-07  Zoltan Bojthe

	TCP queues: fixes/optimizations for merge segments

	- find place of new segment started from end of queue.
	- add error detection: merge unsuccessful

2012-02-07  Zoltan Bojthe

	TCP queues: use seqMin(), seqMax()

2012-02-07  Zoltan Bojthe

	TCP queues: insertBytesFromSegment(): detect sequence no. overflow and
	throw error if occured

2012-01-05  Zoltan Bojthe
